# ai-animation-studio

./: .env.example  .gitignore  .replit  Ai animation studio master spec.md  BUG_REPORT.md  BUG_TESTED_AND_FIXED.md  CRITICAL_FIX_REPORT.md  MASTER_BUG_REPORT.md  PHASE10_COMPLETION_REPORT.md  PHASE2_BUG_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_BUG_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_BUG_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_BUG_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE6_COMPLETION_REPORT.md  PHASE7_COMPLETION_REPORT.md  PHASE8_COMPLETION_REPORT.md  PHASE9_COMPLETION_REPORT.md  PRODUCTION_READINESS.md  TEST_REPORT.md  WORKFLOW_CONTROL_COMPLETION_REPORT.md  docker-compose.dev.yml  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  project_structure.txt  pyproject.toml  replit.md  replit.nix
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/agents/: provider_factory.py  registry.py
backend/agents/implementations/: chroma_vector_store.py  comfyui_provider.py  ffmpeg_renderer.py  memory_vector_store.py  mock_animation_provider.py  mock_asset_evaluation_provider.py  (+16 more)
backend/alembic/: env.py
backend/database/: base.py  connection.py
backend/plugins/: base_plugin.py  registry.py
backend/repositories/: animation_engine_repository.py  animation_repository.py  asset_generation_repository.py  asset_repository.py  base.py  character_repository.py  intelligence_repository.py  knowledge_repository.py  music_engine_repository.py  project_repository.py  research_repository.py  scene_repository.py  story_repository.py  user_repository.py  video_assembly_repository.py  voice_engine_repository.py
backend/services/: animation_service.py  auth_service.py  base.py  character_service.py  library_service.py  project_service.py  scene_service.py  story_generation_service.py  story_service.py
backend/shared/: constants.py  enums.py  types.py
backend/tests/: conftest.py  test_animation_engine.py  test_asset_generation.py  test_asset_manager.py  test_auth.py  test_commit_regression.py  test_knowledge.py  test_knowledge_llm.py  test_library.py  test_music_engine.py  test_projects.py  test_research.py  test_story_intelligence.py  test_story_intelligence_llm.py  test_video_assembly.py  test_voice_engine.py  test_workflow_control.py
backend/workflow/: __init__.py  context.py  executor.py  pipeline.py  progress.py  registry.py  retry.py  setup.py  state_machine.py  step.py
(+321 files in other folders)
